# robethichor-self-negotiation

./: Dockerfile  README.md  launch.bash  package.xml  setup.py
configuration/: disposition_activation.json
evaluation/: multi_lateral.ipynb  scalability.ipynb  task_progress.ipynb  users-expected_results.ods  validation.ipynb  willingness_tb_interrupted.ipynb
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robethichor/lib/robethichor/: connector_node  context_manager_node  ethics_manager_node  (+2 more)
launch/: robethichor_launch.py
log/: latest_build
results/: ground_truth-multi_lateral.csv  ground_truth.csv
robethichor/: package.xml  setup.cfg  setup.py
robethichor/config/: setup.rviz
robethichor/launch/: description.launch.py  display.launch.py  gazebo.launch.py  robethichor.launch.py  robethichor_interruption.launch.py  robethichor_interruption_launch.py  robethichor_launch.py
robethichor/nodes/connector/: connector_node.py
robethichor/nodes/context_manager/: context_manager_node.py
robethichor/nodes/ethics_manager/: ethics_manager_node.py
robethichor/nodes/negotiation_manager/: negotiation_manager_node.py
robethichor/robethichor/nodes/connector/: connector_node.py
robethichor/robethichor/nodes/context_manager/: analyzer.py  context_manager_node.py  monitor.py
robethichor/robethichor/nodes/ethics_manager/: ethics_manager_node.py  executor.py  planner.py
robethichor/robethichor/nodes/interruption_manager/: interruption_manager_node.py  lifecycle_manager.py
robethichor/robethichor/nodes/mission_controller/: interruption_manager.py  lifecycle_manager.py  mission_controller_node.py
robethichor/robethichor/nodes/negotiation_manager/: ethical_impact_analyzer.py  negotiation_engine.py  negotiation_manager_node.py  offer_generator.py  utility_function.py
robethichor/worlds/: base_world.sdf  two_rooms_expanded.world
robethichor/worlds/two_rooms_expanded/: map.pgm  map.yaml
robethichor_interfaces/: CMakeLists.txt  package.xml
robethichor_interfaces/srv/: InterruptionService.srv  NegotiationService.srv
run/: configure_single_robot.bash  configure_usecase.bash  context_update.json  ethic_profiles.json  mock_opponent.bash  run_sn.bash  run_usecase.bash  start_mission.bash
run/multi_lateral/: run_usecase.bash
run/scalability/: generate_test_cases.py  run_usecase.bash
run/scalability/test_cases/: context.json  disposition_activation.json  ethical_implications.json
run/scalability_experiments/: generate_test_cases.py  run_experiment.bash
run/scalability_experiments/test_cases/: disposition_activation.json  ethical_implications.json
run/simulation/: run_usecase.bash
run/task_progress/: run_usecase.bash
run/task_progress/usecases/: disposition_activation.json
run/usecase/: disposition_activation.json  ethical_implications.json
run/usecase/A/: user_status.json
run/usecase/B/: ethic_profiles.json  user_status.json
run/usecase/D/: ethic_profiles.json
run/usecase/F/: ethic_profiles.json
run/usecase/G/: ethic_profiles.json
run/usecase/H/: ethic_profiles.json  goal.json  user_status.json
run/usecase/I/: context.json  ethic_profiles.json  user_status.json
run/usecase/J/: ethic_profiles.json
run/usecases/: disposition_activation.json  ethical_implications.json
run/usecases/A/: ethic_profiles.json  goal.json  user_status.json
run/usecases/B/: context.json  ethic_profiles.json  user_status.json
run/usecases/C/: ethic_profiles.json  goal.json  user_status.json
run/validation/: run_usecase.bash
run/willingness_tb_interrupted/: run_usecase.bash
run/willingness_tb_interrupted/usecases/: ethical_implications.json
rviz_goal_panel/: CMakeLists.txt  README.md  package.xml  rviz_common_plugins.xml
rviz_goal_panel/include/rviz_goal_panel/: goal_panel.hpp
rviz_goal_panel/src/: goal_panel.cpp
(+712 files in other folders)
