<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robethichor</name>
  <version>0.0.1</version>
  <description>RobEthiChor ROS2: Interruption Scenario Expansion</description>
  <maintainer email="reichern@uni-bremen.de">Nele Reichert</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>nav2_msgs</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <exec_depend>python3-flask</exec_depend>
  <exec_depend>robethichor_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
